@@ -1,11 +1,11 @@
 package cisummarizer;
 
-import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.toList;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
+import java.util.function.UnaryOperator;
 
 /**
  * You can ask a report things. Things like:
@@ -17,30 +17,70 @@ import java.util.function.Function;
  */
 abstract class Report {
 
-  private Parser parser;
-  private int numProblems;
-  private boolean errorsEncountered;
-  private List<Problem> orderedProblems;
   private String reportType;
 
-  public Report(Parser parser, String reportType) {
-    this.parser = parser;
-    this.reportType = reportType;
-    numProblems = parser.problems().size();
-    errorsEncountered = !parser.errors().isEmpty();
+  private int numProblems;
+  private boolean errorsEncountered;
+  private List<String> decoratedErrorDetails;
+  private List<String> decoratedProblemDetails;
 
-    orderedProblems = new ArrayList<>(parser.problems());
-    orderedProblems.sort(comparing(toDisplay()));
+  public Report(Parser parser, String reportType) {
+
+    this.reportType = reportType;
+
+    errorsEncountered = !parser.errors().isEmpty();
+    decoratedErrorDetails = decoratedDescriptions(parser.errors());
+
+    List<String> problemsAsText =
+        parser.problems().stream().map(problemAsString()).distinct().collect(toList());
+    problemsAsText.sort(String::compareTo);
+    numProblems = problemsAsText.size();
+
+    decoratedProblemDetails =
+        decoratedDescriptions(problemsAsText).stream().distinct().collect(toList());
   }
 
+  /**
+   * Return what name you would like to give problems for this report. Are they "problems"?
+   * "violations"? "errors"?
+   *
+   * @return the pluralized name for the concept of "problem" in this report
+   */
   abstract String nameForProblems();
 
-  abstract Function<Problem, String> toDisplay();
+  /**
+   * Return what text you would like to show in the report for a given problem.
+   *
+   * <p>Often, this may simply be the getLocation() or getType() of the problem, but you can make
+   * this whatever you want.
+   *
+   * <p>Provides a bit of flexibility with the display of problems in the report.
+   *
+   * @return the text representation of the problem you want to show on the report
+   */
+  abstract Function<Problem, String> problemAsString();
 
   public String header() {
     return String.format("[%s]", reportType);
   }
 
+  /**
+   * Return a brief description of the result of the report. We distinguish between 3 basic cases:
+   *
+   * <ul>
+   *   <ol>
+   *     an error occurred
+   *   </ol>
+   *   <ol>
+   *     no errors happened and no problems as well
+   *   </ol>
+   *   <ol>
+   *     no errors happened and one or more problems happened
+   *   </ol>
+   * </ul>
+   *
+   * @return the summary for this report
+   */
   public String summary() {
     if (errorsEncountered) {
       return "something bad happened:";
@@ -51,26 +91,45 @@ abstract class Report {
     }
   }
 
+  /**
+   * Return a decorated list of lines showing what errors or problems are present in this report.
+   * (If no errors or problems are present, then an empty list is returned.)
+   *
+   * @return a decorated list of errors or problems
+   */
   public List<String> details() {
     if (errorsEncountered) {
-      Function<String, String> decorator = errorMsg -> "|-- " + errorMsg;
-      return decoratedDescriptions(parser.errors(), decorator);
+      return decoratedErrorDetails;
     } else if (numProblems == 0) {
-      return List.of();
+      return Collections.emptyList();
     } else {
-      Function<Problem, String> decorator = problem -> "|-- " + toDisplay().apply(problem);
-      return decoratedDescriptions(orderedProblems, decorator);
+      return decoratedProblemDetails;
     }
   }
 
+  /**
+   * Return the header, summary, and details of this report as a single String.
+   *
+   * @return
+   */
   public String allContent() {
     String detailsAsString = String.join("\n", details()).trim();
     return String.join("\n", header(), summary(), detailsAsString).trim();
   }
 
-  private <T> List<String> decoratedDescriptions(
-      List<T> thingsToDecorate, Function<T, String> decorator) {
-    List<String> decoratedThings = thingsToDecorate.stream().map(decorator).collect(toList());
+  /**
+   * Helper to turn the text form of an error/problem into something slightly purdier.
+   *
+   * <p>This is how we decorate a problem/error line in the report:
+   *
+   * <pre>
+   * |-- blahblahblah
+   * </pre>
+   */
+  private UnaryOperator<String> formattedLine = line -> String.format("|-- %s", line);
+
+  private List<String> decoratedDescriptions(List<String> thingsToDecorate) {
+    List<String> decoratedThings = thingsToDecorate.stream().map(formattedLine).collect(toList());
 
     // add a purdy little pipe symbol so that the problem descriptions look like
     //   | <== this is added
